bundled_metadata/force-app/main/default/objects/Product2/fields/A1C1_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>A1C1_Photo_URL__c</fullName>
    <label>A1C1 Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>