bundled_metadata/force-app/main/default/objects/Product2/fields/BUoM__c.field-meta.xml
<CustomField>
    <fullName>BUoM__c</fullName>
    <label>BUoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>