bundled_metadata/force-app/main/default/objects/Product2/fields/C1N1_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>C1N1_Photo_URL__c</fullName>
    <label>C1N1 Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>