bundled_metadata/force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Foods</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POS Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>