bundled_metadata/force-app/main/default/objects/Product2/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Product Container</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Container</valueSetName>
    </valueSet>
</CustomField>