bundled_metadata/force-app/main/default/objects/Product2/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyISOCodes</valueSetName>
    </valueSet>
</CustomField>