bundled_metadata/force-app/main/default/objects/Product2/fields/DAM_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>DAM_Image_URL__c</fullName>
    <label>DAM Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>