bundled_metadata/force-app/main/default/objects/Product2/fields/Expired_DAM_Flag__c.field-meta.xml
<CustomField>
    <fullName>Expired_DAM_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired DAM Flag</label>
    <type>Checkbox</type>
</CustomField>