bundled_metadata/force-app/main/default/objects/Product2/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <label>Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>