bundled_metadata/force-app/main/default/objects/Product2/fields/Language_Description__c.field-meta.xml
<CustomField>
    <fullName>Language_Description__c</fullName>
    <label>Language Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>