bundled_metadata/force-app/main/default/objects/Product2/fields/Legacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Name__c</fullName>
    <label>Legacy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>