bundled_metadata/force-app/main/default/objects/Product2/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>PEPSICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>