bundled_metadata/force-app/main/default/objects/Product2/fields/Parent_SKU__c.field-meta.xml
<CustomField>
    <fullName>Parent_SKU__c</fullName>
    <label>Product SKU ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>