bundled_metadata/force-app/main/default/objects/Product2/fields/Parent_SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_SKU_Name__c</fullName>
    <label>Parent SKU Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>