bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Brand__c.field-meta.xml
<CustomField>
    <fullName>Prod_Brand__c</fullName>
    <description>PGT code for Product Brand</description>
    <label>Product Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>