bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Brand_Description__c.field-meta.xml
<CustomField>
    <fullName>Prod_Brand_Description__c</fullName>
    <label>Product Brand Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>