bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_Brand_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Brand Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Brand Id)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>