bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Brand_PRT__c.field-meta.xml
<CustomField>
    <fullName>Prod_Brand_PRT__c</fullName>
    <description>PRT hierarchy - Product Brand</description>
    <label>Product Brand PRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>