bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Container_Type_PRT__c.field-meta.xml
<CustomField>
    <fullName>Prod_Container_Type_PRT__c</fullName>
    <description>PRT hierarchy - Product Container Type</description>
    <label>Product Container Type PRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>