bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Count__c.field-meta.xml
<CustomField>
    <fullName>Prod_Count__c</fullName>
    <label>Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>