bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Format__c.field-meta.xml
<CustomField>
    <fullName>Prod_Format__c</fullName>
    <label>Product Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>