bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_Group_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Group Id)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>