bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Group_PRT__c.field-meta.xml
<CustomField>
    <fullName>Prod_Group_PRT__c</fullName>
    <description>PRT hierarchy - Product Group</description>
    <label>Product Group PRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>