bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Line__c.field-meta.xml
<CustomField>
    <fullName>Prod_Line__c</fullName>
    <description>PGT code for Product Line</description>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>