bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_Line_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce id of the related Product Line in the hierarchy</description>
    <label>Product Line Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>