bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Line_PRT__c.field-meta.xml
<CustomField>
    <fullName>Prod_Line_PRT__c</fullName>
    <description>PRT hierarchy - Product Line</description>
    <label>Product Line PRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>