bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Size_PRT__c.field-meta.xml
<CustomField>
    <fullName>Prod_Size_PRT__c</fullName>
    <description>PRT hierarchy - Product Size</description>
    <label>Product Size PRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>