bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Subbrand__c.field-meta.xml
<CustomField>
    <fullName>Prod_Subbrand__c</fullName>
    <description>PGT code for the product subbrand</description>
    <label>Product Subbrand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>