bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Subbrand_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_Subbrand_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Subbrand Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Subbrand Id)</relationshipLabel>
    <relationshipName>Products3</relationshipName>
    <type>Lookup</type>
</CustomField>