bundled_metadata/force-app/main/default/objects/Product2/fields/Prod_Subbrand_PRT__c.field-meta.xml
<CustomField>
    <fullName>Prod_Subbrand_PRT__c</fullName>
    <description>PRT hierarchy - Product Subbrand</description>
    <label>Product Subbrand PRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>