bundled_metadata/force-app/main/default/objects/Product2/fields/Product_Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy_Level__c</fullName>
    <label>Product Hierarchy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Hierarchy_Level</valueSetName>
    </valueSet>
</CustomField>