bundled_metadata/force-app/main/default/objects/Product2/fields/Product_Icon__c.field-meta.xml
<CustomField>
    <fullName>Product_Icon__c</fullName>
    <label>Product Icon</label>
    <length>120072</length>
    <type>LongTextArea</type>
</CustomField>