bundled_metadata/force-app/main/default/objects/Product2/fields/Product_Subbrand__c.field-meta.xml
<CustomField>
    <fullName>Product_Subbrand__c</fullName>
    <label>Product Subbrand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>