bundled_metadata/force-app/main/default/objects/Product2/fields/Sales_UoM__c.field-meta.xml
<CustomField>
    <fullName>Sales_UoM__c</fullName>
    <label>Sales UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>