bundled_metadata/force-app/main/default/objects/Product2/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>