bundled_metadata/force-app/main/default/objects/Product2/fields/SKU_ID_System_of_Record__c.field-meta.xml
<CustomField>
    <fullName>SKU_ID_System_of_Record__c</fullName>
    <label>SKU ID System of Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>