bundled_metadata/force-app/main/default/objects/Product2/fields/Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification__c</fullName>
    <description>DEPRECATED - Use Tax_Rate__c (Product Tax Classification) instead. Marked for deletion across environments.</description>
    <label>Product Tax Classification (DEPRECATED)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>