bundled_metadata/force-app/main/default/objects/Product2/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Product Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TC1</fullName>
            </value>
            <value>
                <fullName>TC2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>