bundled_metadata/force-app/main/default/objects/Product2/fields/UoM_Conversion__c.field-meta.xml
<CustomField>
    <fullName>UoM_Conversion__c</fullName>
    <label>UoM Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>