bundled_metadata/force-app/main/default/objects/Product2/fields/URL_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>URL_Updated_Date__c</fullName>
    <label>URL Updated Date</label>
    <type>DateTime</type>
</CustomField>